--- a/00.Essentials/04.ClassAndStyleBindings/0002_BindingInlineStyles.html
+++ b/00.Essentials/04.ClassAndStyleBindings/0002_BindingInlineStyles.html
@@ -6,6 +6,8 @@
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
 </head>
 <body>
+    <div id="app01_objectSyntax">
 
+    </div>
 </body>
 </html>
